Label the two groups

--- a/demo.html
+++ b/demo.html
@@ -80,7 +80,7 @@
       <form name="myForm">
          <div id="container">
             <div id="checkboxes">
-               <h3>Group 1</h3>
+               <h3>Group 1 (indeterminate)</h3>
 
                <label class="selectAllLabel">
                   <input type="checkbox" id="selectAllGroup1"/>
@@ -102,7 +102,7 @@
                   Choice C
                </label>
 
-               <h3>Group 2</h3>
+               <h3>Group 2 (not indeterminate)</h3>
 
                <label class="selectAllLabel">
                   <input type="checkbox" id="selectAllGroup2"/>
