--- a/demo.html
+++ b/demo.html
@@ -26,7 +26,9 @@
          }
 
          function onSelectCheckbox( checkbox, checkedState ) {
-            var html = "<p>Clicked " + $( checkbox ).attr( "id" )
+            var html = "<p>"
+                     + ( $(checkbox).prop( "checked" ) ? "Selected " : "Deselected " )
+                     + $( checkbox ).attr( "id" )
                      + "</p><p>Checked state of group is: "
                      + checkedState + "</p>";
 
