Don't occupy full screen width in ancient versions of IE

--- a/demo.html
+++ b/demo.html
@@ -70,7 +70,7 @@
          }
 
          #container {
-            min-height: 150px;
+            width: 400px;
          }
 
          #container, #checkboxes, #log {
