--- a/demo.html
+++ b/demo.html
@@ -6,6 +6,8 @@
 
    Copyright (c) 2016 Kurtis LoVerde
    All rights reserved
+
+   Donations:  https://paypal.me/KurtisLoVerde/5
 -->
 
 <html lang="en-US">
@@ -164,5 +166,9 @@
             </div>
          </div>
       </form>
+
+      <h2>Donations</h2>
+      Your support is greatly appreciated and it motivates me to release more open source software.<br/>
+      <a href="https://paypal.me/KurtisLoVerde/6" target="new">https://paypal.me/KurtisLoVerde/5</a>
    </body>
 </html>
