--- a/demo/demo.html
+++ b/demo/demo.html
@@ -90,6 +90,8 @@
       </script>
 
       <style type="text/css">
+         html, body { padding-top: 0; margin-top: 0; }
+
          label {
             display: block;
          }
@@ -113,122 +115,127 @@
          #checkboxes, #log {
             border: 1px solid #000000;
          }
+
+         #log {
+            position : fixed;
+            top: 10px;
+            left: 430px;
+            height: 150px;
+         }
       </style>
    </head>
 
    <body>
-      <form name="myForm">
-         <div id="container">
-            <div id="checkboxes">
-               <h3>Group 1 (indeterminate)</h3>
+      <div id="container">
+         <div id="checkboxes">
+            <h3>Group 1 (indeterminate)</h3>
 
-               <label class="selectAllLabel">
-                  <input type="checkbox" id="selectAllGroup1"/>
-                  Select All
-               </label>
+            <label class="selectAllLabel">
+               <input type="checkbox" id="selectAllGroup1"/>
+               Select All
+            </label>
 
-               <label>
-                  <input type="checkbox" id="group1_a" name="group1" value="1a"/>
-                  Choice A
-               </label>
+            <label>
+               <input type="checkbox" id="group1_a" name="group1" value="1a"/>
+               Choice A
+            </label>
 
-               <label>
-                  <input type="checkbox" id="group1_b" name="group1" value="1b"/>
-                  Choice B
-               </label>
+            <label>
+               <input type="checkbox" id="group1_b" name="group1" value="1b"/>
+               Choice B
+            </label>
 
-               <label>
-                  <input type="checkbox" id="group1_c" name="group1" value="1c"/>
-                  Choice C
-               </label>
+            <label>
+               <input type="checkbox" id="group1_c" name="group1" value="1c"/>
+               Choice C
+            </label>
 
-               <h3>Group 2 (<em>de</em>terminate)</h3>
+            <h3>Group 2 (<em>de</em>terminate)</h3>
 
-               <label class="selectAllLabel">
-                  <input type="checkbox" id="selectAllGroup2"/>
-                  Select All
-               </label>
+            <label class="selectAllLabel">
+               <input type="checkbox" id="selectAllGroup2"/>
+               Select All
+            </label>
 
-               <label>
-                  <input type="checkbox" id="group2_a" name="group2" value="2a"/>
-                  Choice A
-               </label>
+            <label>
+               <input type="checkbox" id="group2_a" name="group2" value="2a"/>
+               Choice A
+            </label>
 
-               <label>
-                  <input type="checkbox" id="group2_b" name="group2" value="2b"/>
-                  Choice B
-               </label>
+            <label>
+               <input type="checkbox" id="group2_b" name="group2" value="2b"/>
+               Choice B
+            </label>
 
-               <label>
-                  <input type="checkbox" id="group2_c" name="group2" value="2c"/>
-                  Choice C
-               </label>
+            <label>
+               <input type="checkbox" id="group2_c" name="group2" value="2c"/>
+               Choice C
+            </label>
 
-               <h3>Group 3 (change by script)</h3>
+            <h3>Group 3 (change by script)</h3>
 
-               <label class="selectAllLabel">
-                  <input type="checkbox" id="selectAllGroup3"/>
-                  Select All
-               </label>
+            <label class="selectAllLabel">
+               <input type="checkbox" id="selectAllGroup3"/>
+               Select All
+            </label>
 
-               <label>
-                  <input type="checkbox" id="group3_a" name="group3" value="3a"/>
-                  Choice A
-               </label>
+            <label>
+               <input type="checkbox" id="group3_a" name="group3" value="3a"/>
+               Choice A
+            </label>
 
-               <label>
-                  <input type="checkbox" id="group3_b" name="group3" value="3b"/>
-                  Choice B
-               </label>
+            <label>
+               <input type="checkbox" id="group3_b" name="group3" value="3b"/>
+               Choice B
+            </label>
 
-               <label>
-                  <input type="checkbox" id="group3_c" name="group3" value="3c"/>
-                  Choice C
-               </label>
+            <label>
+               <input type="checkbox" id="group3_c" name="group3" value="3c"/>
+               Choice C
+            </label>
 
-               <input type="button" id="btnChangeByScript" value="Change 'Choice A' box by script"/>
+            <input type="button" id="btnChangeByScript" value="Change 'Choice A' box by script"/>
 
-               <h3>Group 4 (disabled checkboxes)</h3>
+            <h3>Group 4 (disabled checkboxes)</h3>
 
-               <p>
-                  The state of disabled checkboxes are unaffected by the select-all checkbox.
-                  Their default states, whether checked or unchecked, remain - and they
-                  contribute to the status of the overall checkbox group.  Note that the
-                  select-all checkbox never displays as unchecked - it's either checked or
-                  indeterminate.  This is because there is a disabled, checked checkbox.
-               </p>
+            <p>
+               The state of disabled checkboxes are unaffected by the select-all checkbox.
+               Their default states, whether checked or unchecked, remain - and they
+               contribute to the status of the overall checkbox group.  Note that the
+               select-all checkbox never displays as unchecked - it's either checked or
+               indeterminate.  This is because there is a disabled, checked checkbox.
+            </p>
 
-               <label class="selectAllLabel">
-                  <input type="checkbox" id="selectAllGroup4"/>
-                  Select All
-               </label>
+            <label class="selectAllLabel">
+               <input type="checkbox" id="selectAllGroup4"/>
+               Select All
+            </label>
 
-               <label>
-                  <input type="checkbox" id="group4_a" name="group4" value="4a" checked="checked" disabled/>
-                  Choice A
-               </label>
+            <label>
+               <input type="checkbox" id="group4_a" name="group4" value="4a" checked="checked" disabled/>
+               Choice A
+            </label>
 
-               <label>
-                  <input type="checkbox" id="group4_b" name="group4" value="4b" disabled/>
-                  Choice B
-               </label>
+            <label>
+               <input type="checkbox" id="group4_b" name="group4" value="4b" disabled/>
+               Choice B
+            </label>
 
-               <label>
-                  <input type="checkbox" id="group4_c" name="group4" value="4c"/>
-                  Choice C
-               </label>
+            <label>
+               <input type="checkbox" id="group4_c" name="group4" value="4c"/>
+               Choice C
+            </label>
 
-               <label>
-                  <input type="checkbox" id="group4_d" name="group4" value="4d"/>
-                  Choice D
-               </label>
-            </div>
-
-            <div id="log">
-               Click something
-            </div>
+            <label>
+               <input type="checkbox" id="group4_d" name="group4" value="4d"/>
+               Choice D
+            </label>
          </div>
-      </form>
+      </div>
+
+      <div id="log">
+         Click something
+      </div>
 
       <h2>Donations</h2>
       <p><a href="https://paypal.me/KurtisLoVerde/5" target="new">https://paypal.me/KurtisLoVerde/5</a></p>
