--- a/demo/demo.html
+++ b/demo/demo.html
@@ -234,7 +234,7 @@
       </div>
 
       <div id="log">
-         Click something
+         Interact with the demo.  Callback updates will appear here.
       </div>
 
       <h2>Donations</h2>
