--- a/demo/demo.html
+++ b/demo/demo.html
@@ -202,8 +202,8 @@
                The state of disabled checkboxes are unaffected by the select-all checkbox.
                Their default states, whether checked or unchecked, remain - and they
                contribute to the status of the overall checkbox group.  Note that the
-               select-all checkbox never displays as unchecked - it's either checked or
-               indeterminate.  This is because there is a disabled, checked checkbox.
+               select-all checkbox is always indeterminate because there are disabled
+               checked and unchecked checkboxes.
             </p>
 
             <label class="selectAllLabel">
